native/crates/specular-scene/tests/snapshots/view__selecting_one_entity_outlines_it_and_adds_corner_handles.snap
---
source: crates/specular-scene/tests/view.rs
expression: app.scene_snapshot()
---
canvas page p1 100,100 400x300 r=8
screen rect 100,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p1" 100,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=100,79.5 400x20.5
canvas page p2 700,100 400x300 r=8
screen rect 700,100 400x300 r=8 stroke=#a6a09b/1/outside
screen text "example.com/p2" 700,79.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #6b6b6b middle clip=700,79.5 400x20.5
screen rect 99,99 402x302 stroke=#3b82f6/1/inside
screen rect 95,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 497,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 497,397 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 95,397 8x8 fill=#ffffff stroke=#3b82f6/1/inside
