native/crates/specular-scene/tests/snapshots/view__selecting_several_outlines_each_and_puts_handles_on_their_bounds.snap
---
source: crates/specular-scene/tests/view.rs
expression: app.scene_snapshot()
---
canvas rect 100,100 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
canvas rect 300,250 100x100 fill=#b5b9c0 stroke=#464a53/2/centre
screen rect 99,99 102x102 stroke=#3b82f6/1/inside
screen rect 299,249 102x102 stroke=#3b82f6/1/inside
screen rect 99,99 302x252 stroke=#3b82f6/1/inside
screen rect 95,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 397,95 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 397,347 8x8 fill=#ffffff stroke=#3b82f6/1/inside
screen rect 95,347 8x8 fill=#ffffff stroke=#3b82f6/1/inside
