native/crates/specular-scene/tests/snapshots/view__the_dark_theme_draws_ink_paper_shapes_and_frames_in_its_own_colours.snap
---
source: crates/specular-scene/tests/view.rs
expression: app.scene_snapshot()
---
canvas page p 100,300 400x300 r=8
screen rect 100,300 400x300 r=8 stroke=#57534d/1/outside
screen text "example.com/p" 100,279.5 wrap=400 ellipsis box-h=16.5 11/15.4 w500 #a6a09b middle clip=100,279.5 400x20.5
canvas text "ink" 100,100 14/21 #e7e5e4
canvas shadow 750,102 200x200 blur=8 fill=#0000004d
canvas rect 750,100 200x200 fill=#ffe18e
canvas text "paper" 758,108 wrap=184 14/21 #1c1917 clip=750,100 200x200
canvas rect 500,100 200x100 fill=#685153 stroke=#e8b4b8/2/centre
canvas text "Decide" 512,108 wrap=176 box-h=84 14/19.6 #dcdcdc centre middle clip=500,100 200x100
